--- a/client/angular/app/app.css
+++ b/client/angular/app/app.css
@@ -1,5 +1,25 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body,
 .app {
   height: 100%;
+  font-family: 'Tinos', serif;
+}
+
+.app {
+  padding: 70px 140px;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Helvetica Neue', Arial, san-serif;
+}
+
+h1 {
+  font-weight: 100;
 }
