Set up fake authentication, login component

--- a/client/angular/app/components/blog/blog.html
+++ b/client/angular/app/components/blog/blog.html
@@ -4,6 +4,7 @@
   </h1>
 
   <a href="#" ui-sref="create-entry">New</a>
+  <a href="#" ui-sref="login">Logout</a>
 
   <div class="entry-list-container">
     <entry
