--- a/client/angular/app/components/blog/blog.html
+++ b/client/angular/app/components/blog/blog.html
@@ -4,7 +4,7 @@
   </h1>
 
   <a href="#" ui-sref="create-entry">New</a>
-  <a href="#" ui-sref="login">Logout</a>
+  <a href="#" ng-click="$ctrl.logout()">Logout</a>
 
   <div class="entry-list-container">
     <entry
