Add user relation to entries, filter entries by authenticated user

--- a/client/angular/app/components/show-entry/show-entry.html
+++ b/client/angular/app/components/show-entry/show-entry.html
@@ -14,7 +14,7 @@
     </small>
 
     <div>
-      <button ng-click="$ctrl.onRemove()">
+      <button ng-click="$ctrl.remove()">
         Remove
       </button>
     </div>
