Add less loader to replace css

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -1,3 +1,6 @@
+@font-serif: 'Tinos', serif;
+@font-san-serif: 'Helvetica Neue', Arial, san-serif;
+
 * {
   box-sizing: border-box;
 }
@@ -6,7 +9,7 @@ html,
 body,
 .app {
   height: 100%;
-  font-family: 'Tinos', serif;
+  font-family: @font-serif;
 }
 
 .app {
@@ -17,7 +20,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: 'Helvetica Neue', Arial, san-serif;
+  font-family: @font-san-serif;
 }
 
 h1 {
