--- a/client/react/app/components/Home.less
+++ b/client/react/app/components/Home.less
@@ -1,5 +1,7 @@
+@font-large: 42px;
+
 .blog-title {
-  font-size: 36px;
+  font-size: @font-large;
   margin-bottom: 70px;
   letter-spacing: 0.6px;
 }
