Add delete functionality to blog entries in react app

--- a/client/react/app/components/Entry.less
+++ b/client/react/app/components/Entry.less
@@ -33,6 +33,7 @@ button.new-entry-submit {
   color: @black;
   box-shadow: none;
   background: transparent;
+  margin-right: 20px;
 }
 
 button.new-entry-submit:hover {
