Add score card prototype

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -93,6 +93,12 @@ h4 {
   }
 }
 
+.label-default {
+  font-family: @font-san-serif;
+  font-size: 12px;
+  letter-spacing: 0.4px;
+}
+
 .input-default {
   border: 1px solid @border-gray;
   border-radius: 2px;
