--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -34,7 +34,8 @@ body,
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5 {
   font-family: @font-san-serif;
   letter-spacing: 0.4px;
   margin-top: 10px;
@@ -59,6 +60,11 @@ h3 {
 h4 {
   font-size: 20px;
   font-weight: 500;
+}
+
+h5 {
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .button-default {
@@ -127,6 +133,10 @@ h4 {
     border-color: @black;
     outline: 0;
   }
+}
+
+.checkbox-container {
+
 }
 
 .component-container {
