--- a/client/react/app/components/scorecard/ScoreCard.less
+++ b/client/react/app/components/scorecard/ScoreCard.less
@@ -1,8 +1,16 @@
-.category-label {
-  margin-top: 8px;
-  margin-bottom: 8px;
+@scorecard-gray: #d3d3d3;
+
+.scorecard-container {
+  border-top: 1px solid @scorecard-gray;
+  margin-bottom: 40px;
+  width: 60%;
 }
 
-.score-details {
-  margin-left: 4px;
+.scorecard-date {
+  font-weight: 100;
+}
+
+.category-label {
+  margin-top: 32px;
+  margin-bottom: 16px;
 }
