--- a/client/react/app/components/scorecard/ScoreCard.less
+++ b/client/react/app/components/scorecard/ScoreCard.less
@@ -1,7 +1,7 @@
-@scorecard-gray: #d3d3d3;
+@border-gray: #d3d3d3;
 
 .scorecard-container {
-  border-top: 1px solid @scorecard-gray;
+  border-top: 1px solid @border-gray;
   margin-bottom: 40px;
   min-width: 360px;
   width: 52%;
@@ -14,14 +14,14 @@
 }
 
 .scorecard-overview {
-  border: 1px solid @scorecard-gray;
+  border: 1px solid @border-gray;
   font-size: 18px;
   line-height: 20px;
   margin-bottom: 24px;
 }
 
 .scorecard-overview-total-container {
-  border-bottom: 1px solid @scorecard-gray;
+  border-bottom: 1px solid @border-gray;
   padding: 24px;
   text-align: center;
 }
@@ -38,10 +38,6 @@
 
 .scorecard-overview-completed-task {
   margin-bottom: 8px;
-}
-
-.scorecard-date {
-  font-weight: 100;
 }
 
 .category-label {
