Add icons to dashboard preview component

--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -27,6 +27,14 @@
   .date-today {
     font-weight: 500;
   }
+
+  .preview-icon {
+    margin-left: 16px;
+  }
+
+  .checkmark {
+    vertical-align: -2px;
+  }
 }
 
 .dashboard-preview-points {
