--- a/client/react/app/components/checklist/CheckList.less
+++ b/client/react/app/components/checklist/CheckList.less
@@ -2,6 +2,10 @@
 @border-gray: #d3d3d3;
 @font-handwritten: 'Covered By Your Grace', cursive;
 
+.checklist-wrapper {
+  width: 80%;
+}
+
 .checklist-container {
   margin-top: 32px;
   margin-bottom: 40px;
@@ -14,7 +18,6 @@
 .checklist-overview {
   border: 1px solid @border-gray;
   border-radius: 4px;
-  margin-top: 32px;
   padding: 24px;
   text-align: center;
   width: 48%;
