--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -83,21 +83,29 @@ a {
   text-decoration: none;
 }
 
-.btn-default {
-  background: @light-gray-3;
-  border: 1px solid @light-gray-3;
+.btn-default,
+.btn-primary,
+.btn-link {
   border-radius: 2px;
   box-shadow: none;
-  color: @dark-gray;
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 0.4px;
-  padding: 16px 24px;
+  padding: 12px 24px;
 
-  &.btn-sm {
-    font-size: 16px;
-    padding: 12px 16px;
+  &:hover {
+    cursor: pointer;
   }
+
+  &:focus {
+    outline: 0;
+  }
+}
+
+.btn-default {
+  background: @light-gray-3;
+  border: 1px solid @light-gray-3;
+  color: @dark-gray;
 
   &:hover {
     background: @light-gray;
@@ -111,6 +119,18 @@ a {
   &:active {
     border-color: @light-gray;
   }
+}
+
+.btn-primary {
+  background: @bright-blue;
+  border: 1px solid @bright-blue;
+  color: @white;
+}
+
+.btn-link {
+  background: transparent;
+  border: none;
+  color: @dark-gray;
 }
 
 // TODO: deprecate
@@ -179,19 +199,14 @@ a {
 }
 
 .input-default {
-  border: 1px solid @border-gray;
-  border-radius: 2px;
+  border: 1px solid @gray;
+  border-radius: 4px;
   display: block;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
   letter-spacing: 0.4px;
   margin-bottom: @margin-default;
-  padding: 8px 16px;
-
-  &.-large {
-    font-size: 16px;
-    padding: 12px 16px;
-  }
+  padding: 12px 24px;
 
   &.-wide {
     width: 100%;
