Set up prototypes for some more reporting components

--- a/client/react/app/components/tasks/Task.less
+++ b/client/react/app/components/tasks/Task.less
@@ -1,3 +1,6 @@
+@border-gray: #b4b4b4;
+@bright-blue: #33A2CC;
+
 .task-sublist {
   margin-top: 16px;
   max-width: 800px;
@@ -60,4 +63,20 @@
 
 .new-category-form {
   margin-top: 40px;
+}
+
+.top-task-item {
+  font-size: 14px;
+  list-style-type: none;
+  padding-bottom: 8px;
+}
+
+.percentage-bar-container {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.percentage-bar {
+  background-color: @bright-blue;
+  padding: 2px;
 }
