Improve About page content and width a bit

--- a/client/react/app/components/home/Home.less
+++ b/client/react/app/components/home/Home.less
@@ -13,4 +13,12 @@
 
 .about-content {
   line-height: 1.6;
+  width: 80%;
+}
+
+
+@media (max-width: 800px) {
+  .about-content {
+    width: 90%;
+  }
 }
