Attempt to make design a bit more mobile friendly

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -300,26 +300,6 @@ a {
   float: right;
 }
 
-.nav-container {
-  border-bottom: 1px solid @light-gray-2;
-}
-
-.nav-content {
-  max-width: 1080px;
-  margin: 0 auto;
-  padding: 0px 40px;
-}
-
-.nav-header {
-  margin-top: 24px;
-  margin-bottom: 24px;
-}
-
-.logout-container {
-  margin-top: 48px;
-  font-size: 16px;
-}
-
 .default-container {
   max-width: 1080px;
   margin: 40px auto;
@@ -371,5 +351,11 @@ a {
 @media (max-width: 880px) {
   .app {
     // padding: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  .default-container {
+    padding: 0px 16px;
   }
 }
