--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -122,3 +122,15 @@
 .dashboard-chart-container {
   margin-top: 40px;
 }
+
+@media (max-width: 720px) {
+  .dashboard-preview-container {
+    width: 100%;
+  }
+
+  .dashboard-list-container {
+    margin-top: 40px;
+    padding: 0;
+    width: 100%;
+  }
+}
