--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -8,10 +8,6 @@
 @light-blue-hover: #F6FCFF;
 @light-blue-selected: #eaf8ff;
 
-.dashboard-preview-container {
-  width: 40%;
-}
-
 .dashboard-preview-header {
   &.date-header {
     color: @main-header-gray;
@@ -41,19 +37,18 @@
 
 .dashboard-preview-points {
   margin-top: 16px;
+  margin-bottom: 24px;
   font-weight: 500;
 }
 
 .dashboard-list-container {
-  padding-left: 32px;
-  width: 60%;
+  padding-left: 64px;
+  width: 70%;
 }
 
 .dashboard-preview-container {
-  border: 1px solid @border-gray;
-  border-radius: 4px;
   color: @section-content-gray;
-  padding: 32px;
+  width: 30%;
 }
 
 .dashboard-scorecard-preview {
