--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -1,12 +1,11 @@
 @white: #fff;
-@border-gray: #b4b4b4;
-@table-border-gray: #E9E9E9;
+@border-gray: #D8D8D8;
 @main-header-gray: #4A4A4A;
 @header-background-gray: #F3F3F3;
 @section-header-gray: #7A7A7A;
 @section-content-gray: #818181;
+@bright-blue: #33A2CC;
 @light-blue-hover: #F6FCFF;
-@light-blue-selected: #eaf8ff;
 
 .dashboard-preview-container {
   width: 40%;
@@ -81,7 +80,7 @@
 .dashboard-list-table {
   width: 100%;
   font-size: 14px;
-  border-bottom: 2px solid @table-border-gray;
+  border-bottom: 1px solid @border-gray;
   border-spacing: 2px 0px;
   margin-bottom: 40px;
 
@@ -102,7 +101,7 @@
   }
 
   td {
-    border-top: 2px solid @table-border-gray;
+    border-top: 1px solid @border-gray;
     padding: 12px 16px;
   }
 
@@ -114,7 +113,9 @@
     }
 
     &.selected {
-      background-color: @light-blue-selected;
+      background-color: @bright-blue;
+      color: white;
+      font-weight: 500;
     }
   }
 }
