--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -81,6 +81,7 @@
 
   th, td {
     border-right: 2px solid @white;
+    width: 33%;
 
     &:last-child {
       border-right: none;
@@ -109,7 +110,7 @@
 
     &.selected {
       background-color: @bright-blue;
-      color: white;
+      color: @white;
       font-weight: 500;
     }
   }
