Lint migration scripts, initial setup of checklist question stats

--- a/client/react/app/components/tasks/Task.less
+++ b/client/react/app/components/tasks/Task.less
@@ -1,3 +1,4 @@
+@gray: #979797;
 @border-gray: #b4b4b4;
 @bright-blue: #33A2CC;
 
@@ -38,6 +39,10 @@
   .edit-icon {
     cursor: pointer;
     visibility: hidden;
+  }
+
+  &.inactive {
+    color: @gray;
   }
 
   &:hover {
