Add simple component for mood frequency

--- a/client/react/app/components/tasks/Task.less
+++ b/client/react/app/components/tasks/Task.less
@@ -87,7 +87,7 @@
   margin-top: 40px;
 }
 
-.top-task-item {
+.reporting-percentage-item {
   font-size: 14px;
   list-style-type: none;
   padding-bottom: 8px;
