--- a/client/react/app/components/home/Home.less
+++ b/client/react/app/components/home/Home.less
@@ -11,7 +11,7 @@
   letter-spacing: 0.6px;
 }
 
-.about-content {
+.md-content {
   line-height: 1.6;
   width: 80%;
 }
@@ -21,7 +21,7 @@
 }
 
 @media (max-width: 800px) {
-  .about-content {
+  .md-content {
     width: 90%;
   }
 }
