Add todo comment, clean up unused code

--- a/client/react/app/components/checklist/CheckList.less
+++ b/client/react/app/components/checklist/CheckList.less
@@ -2,6 +2,7 @@
 @border-gray: #d3d3d3;
 @font-handwritten: 'Covered By Your Grace', cursive;
 
+// TODO: DRY this up (see .checklist-v2)
 .checklist-v1 {
   .checklist-wrapper {
     width: 80%;
