Set up daily log feature in dashboard

--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -36,7 +36,6 @@
 
 .dashboard-preview-points {
   margin-top: 16px;
-  margin-bottom: 24px;
   font-weight: 500;
 }
 
@@ -62,7 +61,13 @@
 }
 
 .dashboard-checklist-preview {
+  border-bottom: 1px solid @border-gray;
   padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.dashboard-entry-preview {
+  padding-top: 32px;
 }
 
 .dashboard-preview-scorecard-overview {
