Allow users to make blog posts public vs private, and share with others

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -362,6 +362,11 @@ a {
   margin-left: 8px;
 }
 
+.x-icon {
+  height: 16px;
+  transform: rotate(45deg);
+}
+
 @media (max-width: 880px) {
   .app {
     // padding: 40px;
