Initial setup of daily dos and donts list

--- a/client/react/app/components/tasks/Task.less
+++ b/client/react/app/components/tasks/Task.less
@@ -21,12 +21,17 @@
   padding: 0;
 
   .task-description,
+  .imperative-description,
   .task-points {
     display: inline-block;
   }
 
   .task-description {
     width: 400px;
+  }
+
+  .imperative-description {
+    width: 80%;
   }
 
   .task-points {
@@ -75,6 +80,11 @@
 .task-description-input,
 .new-category-input {
   width: 385px;
+  margin-bottom: 0px;
+}
+
+.imperative-description-input {
+  width: 560px;
   margin-bottom: 0px;
 }
 
